fix multiple bugs in System Info module