@@ -1,9 +1,22 @@
 package cli;
 
+import java.util.*;
+import java.lang.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+
 import java.net.InetAddress;
 
 import com.sun.management.OperatingSystemMXBean;
 import java.lang.management.ManagementFactory;
+
+import java.io.InputStream;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 
 public class SystemInfo {
     static String getOS() {
@@ -11,43 +24,81 @@ public class SystemInfo {
     }
 
     static String getUser() {
-        return "User: " + System.getProperty("user.name") + "@" +  InetAddress.getLocalHost().getHostName();
+        try {
+            return "User: " + System.getProperty("user.name") + "@" +  InetAddress.getLocalHost().getHostName();
+        }  catch (Exception e) {
+            return "Unknown User";
+        }
     }
 
     static String getKernel(String os) {
 
         if(os.contains("win")) {
-            "Kernel: " + "NT " + System.getProperty("os.version");
+            return "Kernel: " + "NT " + System.getProperty("os.version");
         } else if(os.contains("mac")) {
-            "Kernel: " + "Darwin " + System.getProperty("os.version");
+            return "Kernel: " + "Darwin " + System.getProperty("os.version");
         } else {
-            "Kernel: " + System.getProperty("os.version");
+            return "Kernel: " + System.getProperty("os.version");
         }
     }
 
     static String getUptime() {
-        OperatingSystemMXBean os = (OperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean();
+        try {
 
-        long seconds = os.getSystemUptime();
+            ProcessBuilder pb = new ProcessBuilder(
+                "powershell",
+                "-command",
+                "(Get-CimInstance Win32_OperatingSystem).LastBootUpTime"
+            );
 
-        long days = seconds / 86400;
-        seconds %= 86400;
+            pb.redirectErrorStream(true);
 
-        long hours = seconds / 3600;
-        seconds %= 3600;
+            Process p = pb.start();
+            p.waitFor();
 
-        long minutes = seconds / 60;
+            String output = new String(p.getInputStream().readAllBytes());
 
-        return days + "d " + hours + "h " + minutes + "m";
+            String boot = output.lines()
+                .map(String::trim)
+                .filter(l -> !l.isEmpty())
+                .findFirst()
+                .orElse(null);
+
+            if (boot == null)
+                return "Unknown uptime";
+
+            DateTimeFormatter fmt =
+                DateTimeFormatter.ofPattern("dd MMMM yyyy hh:mm:ss a", Locale.ENGLISH);
+
+            LocalDateTime bootTime = LocalDateTime.parse(boot, fmt);
+
+            long seconds = ChronoUnit.SECONDS.between(
+                bootTime,
+                LocalDateTime.now()
+            );
+
+            long days = seconds / 86400;
+            seconds %= 86400;
+
+            long hours = seconds / 3600;
+            seconds %= 3600;
+
+            long minutes = seconds / 60;
+
+            return "Uptime: " + days + "d " + hours + "h " + minutes + "m";
+
+        } catch (Exception e) {
+            return "Unknown uptime: " + e.getMessage();
+        }
     }
 
     static String getCPU(String os) {
         try {
-            String cpu;
+            String cpu = "Unknown CPU";
             if(os.contains("win")) {
-                Process p = Runtime.getRuntime().exec("wmic cpu get name");
+                Process p = new ProcessBuilder("wmic", "cpu", "get", "name").start();
 
-                BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+                BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
             
                 String line;
                 while ((line = reader.readLine()) != null) {
@@ -55,14 +106,15 @@ public class SystemInfo {
                     line = line.trim();
 
                     if (!line.isEmpty() && !line.equalsIgnoreCase("Name")) {
-                        return line;
+                        cpu = line;
+                        break;
                     }
                 }   
 
             } else if(os.contains("mac")) {
-                Process p = Runtime.getRuntime().exec(
-                    "sysctl -n machdep.cpu.brand_string"
-                );
+                Process p = new ProcessBuilder(
+                    "sysctl", "-n", "machdep.cpu.brand_string"
+                ).start();
 
                 BufferedReader r = new BufferedReader(new InputStreamReader(p.getInputStream()));
                 cpu = r.readLine();
@@ -73,6 +125,7 @@ public class SystemInfo {
                 for (String line : lines) {
                     if (line.startsWith("model name")) {
                         cpu = line.split(":")[1].trim();
+                        break;
                     }
                 }
             }
@@ -84,40 +137,48 @@ public class SystemInfo {
         } catch (Exception e) {
             return "Unknown CPU";
         }
-        return "Unknown CPU";
     }
 
     static String getRAMUsage() {
         OperatingSystemMXBean os = (OperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean();
 
-        long totalRAM = os.getTotalPhysicalMemorySize();
-        long freeRAM = os.getFreePhysicalMemorySize();
+        long totalRAM = os.getTotalMemorySize();
+        long freeRAM = os.getFreeMemorySize();
         long usedRAM = totalRAM - freeRAM;
 
         long totalGB = totalRAM / (1024 * 1024 * 1024);
         long usedGB = usedRAM / (1024 * 1024 * 1024);
 
-        return "Memory: " + usedRAM + "GB / " + totalRAM + "GB";
+        return "Memory: " + usedGB + "GB / " + totalGB + "GB";
     }
 
-    static int getCPUUsage() {
-        OperatingSystemMXBean os = (OperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean();
+    static String getCPUUsage() {
+        try {
+            OperatingSystemMXBean os = (OperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean();
 
-        return (int)(os.getCpuLoad() * 100);
+            Thread.sleep(100);
+
+            return "CPU Load: " + os.getCpuLoad() * 100 + "%";
+
+        } catch (Exception e) {
+            return "Unknown CPU load";
+        }
     }
 
-    List<String> getInfo() {
+    public List<String> getInfo() {
         List<String> info = new ArrayList<>();
 
         String os = System.getProperty("os.name").toLowerCase();
 
         info.add(getUser());
         info.add(getOS());
-        info.add(getKernel());
+        info.add(getKernel(os));
         info.add(getUptime());
-        info.add(getCPU());
+        info.add(getCPU(os));
         info.add(getRAMUsage());
         info.add(getCPUUsage());
+
+        for(String c: info) System.out.println(c);
 
         return info;
     }
